--- a/dj/main/templates/orphan_dv.html
+++ b/dj/main/templates/orphan_dv.html
@@ -44,7 +44,7 @@
 </tr> 
 
 </table>
-<img height=100 src="{{MEDIA_URL}}/{{raw_file.show.client.slug}}/{{raw_file.show.slug}}/dv/{{raw_file.location.slug}}/{{raw_file.basename}}_audio.png"> 
+<img src="{{MEDIA_URL}}/{{raw_file.show.client.slug}}/{{raw_file.show.slug}}/dv/{{raw_file.location.slug}}/{{raw_file.basename}}_audio.png"> 
 
   {% endfor %}
 
