--- a/dj/main/templates/raw_file.html
+++ b/dj/main/templates/raw_file.html
@@ -47,6 +47,7 @@
 </tr> 
 
 </table>
-<img height=100 src="{{MEDIA_URL}}/{{raw_file.base_url}}_audio.png"/>
+{# <img src="{{MEDIA_URL}}/{{raw_file.base_url}}_audio.png"/> #}
+<img src ="http://192.237.240.167/static/veyepar/{{raw_file.show.client.slug}}/{{raw_file.show.slug}}/audio_png/dv/{{raw_file.location.slug}}/{{raw_file.basename}}_audio.png">
 
 {% endblock %}
