--- a/dj/main/templates/raw_file_audio.html
+++ b/dj/main/templates/raw_file_audio.html
@@ -24,8 +24,8 @@
    {% for rfa in rfas.list %}
 
    <a href="{% url raw_file rfa.rf.id %}">
-   <img width=1000 height=100 src ="{{MEDIA_URL}}/{{rfa.rf.base_url}}_audio.png">
-   <img width=1000 height=100 src ="http://192.237.240.167/static/veyepar/{{rfa.rf.show.client.slug}}/{{rfa.rf.show.slug}}/audio_png/dv/{{rfa.rf.location.slug}}/{{rfa.rf.basename}}_audio.png"
+       #{ <img src ="{{MEDIA_URL}}/{{rfa.rf.base_url}}_audio.png"> #}
+   <img src ="http://192.237.240.167/static/veyepar/{{rfa.rf.show.client.slug}}/{{rfa.rf.show.slug}}/audio_png/dv/{{rfa.rf.location.slug}}/{{rfa.rf.basename}}_audio.png">
    </a>
 
   {% endfor %}
