--- a/dj/main/templates/raw_file.html
+++ b/dj/main/templates/raw_file.html
@@ -7,6 +7,7 @@
 <tr>
     <td> <video src ="{{MEDIA_URL}}/{{raw_file.base_url}}.ogv" 
       controls poster = "{{MEDIA_URL}}/{{raw_file.base_url}}.png" 
+      preload="none"
     ></video>
 </td>
 
