--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -31,8 +31,10 @@
 <tbody>
 <tr><td>Name</td><td><b>{{episode.name}}</b></td></tr>
 <tr><td>Author(s)</td><td>{{episode.authors}} </td></tr>
-<tr><td>Location</td><td><a href="{% url admin:main_location_change location.id%}">{{episode.location}}</a></td><td><a href="{% url episode_list client_slug=client.slug show_slug=show.slug %}?client={{client.slug}}&show={{show.slug}}&location={{episode.location.slug}}&date={{episode.start|date:"Y-m-d"}}">Room</a></td></tr>
-<tr><td>Date</td><td>{{episode.start|date:"b D d"}}</td></tr>
+<tr><td>Location</td><td><a href="{% url admin:main_location_change location.id%}">{{episode.location}}</a></td>
+</tr>
+<tr><td>Date</td><td><a href="{% url episode_list client_slug=client.slug show_slug=show.slug %}?client={{client.slug}}&amp;show={{show.slug}}&amp;location={{episode.location.slug}}&amp;date={{episode.start|date:"Y-m-d"}}">
+            {{episode.start|date:"b D d"}}</a></td></tr>
 <tr><td>Start</td><td>{% if same_dates %}{{episode.start|date:"H:i"}}{% else %}{{episode.start}}{% endif %}</td>
 <td>First Raw Start</td><td>{% if same_dates %}{{clrffs.0.0.raw_file.start|date:"H:i"}}{% else %}{{clrffs.0.0.raw_file.start}}{% endif %}</td></tr>
 <tr>
@@ -80,7 +82,7 @@ Admin: <a href="{% url admin:main_episode_change episode.id%}">episode</a>
 
 {% for img in episode.image_file_set.all %}
 <a href="http://192.237.240.167/static/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}">
-    <img src="http://192.237.240.167/static/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}" width=90 >
+    <img alt="recording sheet" src="http://192.237.240.167/static/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}" width=90 >
 </a>
 {% endfor %}
 
@@ -89,7 +91,7 @@ Admin: <a href="{% url admin:main_episode_change episode.id%}">episode</a>
 <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/mp4/{{episode.slug}}.mp4">mp4</a>
 <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/webm/{{episode.slug}}.webm">webm</a>
 
-<form action="" method="POST">{% csrf_token %}
+<form method="POST">{% csrf_token %}
     {# <input type="submit" value="{{user.is_authenticated|yesno:"Save,not logged in,"}}" /> #}
 <input type="submit" value="Save" />
 
@@ -114,16 +116,19 @@ Admin: <a href="{% url admin:main_episode_change episode.id%}">episode</a>
   <tbody>
     <tr>
     <td>
-    {{clrfform.clid}}
       <table border=1>
       <tbody>
 <tr><td> {{ clrfform.sequence.label_tag }}{{ clrfform.sequence }}</td></tr>
 <tr><td> <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}">{{ cl.raw_file.filename }}</a></td></tr>
 <tr><td> <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogv" target=foo>{{ cl.raw_file.basename }}.ogv</a></td></tr>
 <tr><td> <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.png">{{cl.raw_file.basename}}.png</a></td></tr>
-<tr><td> <video src ="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogv" controls width=200
-    poster ="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.png"
+<tr><td> <video 
+    width=200
+    src ="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogv" 
+    controls 
     preload="none"
+    currentTime = 50
+    poster ="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.png"
     ></video>
     </td></tr>
      </tbody>
@@ -184,7 +189,7 @@ Admin: <a href="{% url admin:main_episode_change episode.id%}">episode</a>
   </tr>
   {% endif %}
   <tr><td>
-  <img src ="http://192.237.240.167/static/veyepar/{{cl.raw_file.show.client.slug}}/{{cl.raw_file.show.slug}}/audio_png/dv/{{cl.raw_file.location.slug}}/{{cl.raw_file.basename}}_audio.png">
+  <img alt="audio" src ="http://192.237.240.167/static/veyepar/{{cl.raw_file.show.client.slug}}/{{cl.raw_file.show.slug}}/audio_png/dv/{{cl.raw_file.location.slug}}/{{cl.raw_file.basename}}_audio.png">
   </td></tr>
   <tr><td>
   <table>
@@ -202,8 +207,9 @@ Admin: <a href="{% url admin:main_episode_change episode.id%}">episode</a>
 <table border=1>
 <tbody>
     <tr><td> 
-<a href="{% url admin:main_raw_file_changelist %}?location__id__exact={{episode.location.id}}&start__year={{episode.start|date:"Y"}}&start__month={{episode.start|date:"m"}}&start__day={{episode.start|date:"d"}}">raw files day</a>
+<a href="{% url admin:main_raw_file_changelist %}?location__id__exact={{episode.location.id}}&amp;start__year={{episode.start|date:"Y"}}&amp;start__month={{episode.start|date:"m"}}&amp;start__day={{episode.start|date:"d"}}">raw files day</a>
     </td></tr>
+
 {{ add_cutlist_to_ep }}
 </tbody>
 </table>
