--- a/dj/main/templates/episodes_table.html
+++ b/dj/main/templates/episodes_table.html
@@ -34,6 +34,10 @@
             {%if episode.host_url %}<a href="{{episode.host_url}}">Y</a>{% endif %}
             {%if episode.public_url %}<a href="{{episode.public_url}}">R</a>{% endif %}
         </td>
+        <td_audio>
+          {%if episode.state %}<img src ="{{MEDIA_URL}}/{{episode.show.client.slug}}/{{episode.show.slug}}/webm/{{episode.slug}}_audio.png"></a>{% endif %}
+        </td>
+
       </tr>
     {% endfor %}
   </table>
