remove _slug from qp

--- a/dj/main/templates/raw_file_audio.html
+++ b/dj/main/templates/raw_file_audio.html
@@ -3,13 +3,13 @@
 {% block content %}
 
 {% if prev_location %}
-    <a href="?show_id={{show.id}}&location_slug={{prev_location.slug}}&start_date={{start_date}}">{{prev_location.slug}}</a>
+    <a href="?show_id={{show.id}}&location={{prev_location.slug}}&start_date={{start_date}}">{{prev_location.slug}}</a>
  {% else %}
  (first)
  {% endif %}
 {{location}}
 {% if next_location %}
-    <a href="?show_id={{show.id}}&location_slug={{next_location.slug}}&start_date={{start_date}}">{{next_location.slug}}</a>
+    <a href="?show_id={{show.id}}&location={{next_location.slug}}&start_date={{start_date}}">{{next_location.slug}}</a>
  {% else %}
  (last)
  {% endif %}
