--- a/dj/volunteers/templates/episode_review.html
+++ b/dj/volunteers/templates/episode_review.html
@@ -12,7 +12,7 @@
   <tbody>
     <tr><th>Name</th><td><strong>{{ episode.name }}</strong></td></tr>
     <tr><th>Presenter(s)</th><td>{{ episode.authors }}</td></tr>
-    <tr><th>Location</th><td>{% if user.is_staff %}<a href="{% url admin:main_location_change location.id%}">{% endif %}{{ episode.location }}{% if user.is_staff %}</a>{% endif %}</td></tr>
+    <tr><th>Location</th><td>{% if user.is_staff %}<a href="{% url rf_set episode.location.slug %}?start_date={{episode.start|date:"Y-m-d"}}">{% endif %}{{ episode.location }}{% if user.is_staff %}</a>{% endif %}</td></tr>
     <tr><th>Time</th><td>{{ episode.start|date:"D, d M, Y" }} {{ episode.start|date:"H:i"}}-{% if not same_dates %}{{ episode.end|date:"D, d M, Y" }} {% endif %}{{ episode.end|date:"H:i" }}</td></tr>
   </tbody>
   </table>
