--- a/dj/volunteers/templates/episode_review.html
+++ b/dj/volunteers/templates/episode_review.html
@@ -57,9 +57,21 @@
   <p>Select which video files belong to this talk. 
 {% if sheets %}
   You can use the recording sheets above for reference. 
+     </p>
 {% endif %}
-     Click on the play button for each clip to
-     see the video.
+     <p>
+     Below are the raw files that were created durring the block of time and space scheduled for the talk.  
+     Click on the play button for each clip to see the video.
+     <p>
+     <p>
+     You may want to trim cruft, (unwanted content) like people filing into the room and getting ready.
+     </p>
+     <p>
+     If a file contains large amounts of cruft, you should remove it.  Introductions are nice, if they are nice.  If they include too much spam, or something you would not want, remove it.  The encoder doesn't care if you cut stuff off or not, but the people who view the video will.  Use your judgment.
+    </p>
+     <p>
+     You can trim from the start and end by entering the time in the Start and End boxes.  The time you enter is the time you see  on the player.  Hit Play, when you are at the point you want the talk to start, hit Pause. look at the time ont the player, enter that in the Start box, like 1:23.   Run the slider to the end and Play.  If you talk ends long before the end of the file, hit Pause at the end of the talk, enter the time you see on the player in the End box.  
+     </p>
   <p>
   {% include "_video_formset.html" %}
 
