--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -239,7 +239,7 @@ src ="{{MEDIA_URL}}/{{cl.raw_file.show.client.slug}}/{{cl.raw_file.show.slug}}/a
 <table border=1>
 <tbody>
     <tr><td> 
-<a href="{% url admin:main_raw_file_changelist %}?location__id__exact={{episode.location.id}}&amp;start__year={{episode.start|date:"Y"}}&amp;start__month={{episode.start|date:"m"}}&amp;start__day={{episode.start|date:"d"}}">raw files day</a>
+<a href="{% url admin:main_raw_file_changelist %}?location__id__exact={{episode.location.id}}&amp;start__year={{episode.start|date:"Y"}}&amp;start__month={{episode.start|date:"m"}}&amp;start__day={{episode.start|date:"d"}}">raw files day (admin)</a>
     </td></tr>
 
 {{ add_cutlist_to_ep }}
