--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -79,7 +79,7 @@
 
                  <span class="left">expected:</span><span class="right">{{item.talk_gig}} g</span><br/>
                  {% if item.files %}
-                 <span class="left">files: <a style="display: inline-block;" href="{% url rv_set loc.loc.slug %}?start_date={{item.date|date:"Y-m-d"}}">{{item.files}}</a> {{item.alarm}}%</span>
+                 <span class="left">files: <a style="display: inline-block;" href="{% url rf_set loc.loc.slug %}?start_date={{item.date|date:"Y-m-d"}}">{{item.files}}</a> {{item.alarm}}%</span>
                  <span class="right">{{item.gig}} g</span><br>
                  <span class="right">{{item.variance}} g</span>
 
