add delimiters between chapter times.

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -50,7 +50,7 @@
     <td>Segments</td> <td>
         {% for chap in chaps %}
           {% if chap.0 %}
-            {{chap.0.1}}
+            {{chap.0.1}},
           {%endif%}
         {%endfor%}
     </td>
