--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -88,24 +88,6 @@ Admin: <a href="{% url admin:main_episode_change episode.id%}">episode</a>
 <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/titles/{{episode.slug}}.svg"> svg</a>
 <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/titles/{{episode.slug}}.png"> png</a><br/>
 
-<div class="viewer" style="height: 200px; width: 800px;" >
-{% for img in episode.image_file_set.all %}
-    <img alt="recording sheet" src="http://192.237.240.167/static/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}" width=200 height=400 >
-{% endfor %}
-</div>
-
- <script>
-$(".viewer").zoomer();
- </script>
-
-{% comment %}
-{% for img in episode.image_file_set.all %}
-<a href="http://192.237.240.167/static/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}">
-    <img alt="recording sheet" src="http://192.237.240.167/static/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}" width=90 >
-</a>
-{% endfor %}
-{% endcomment %}
-
 {# <video src="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/ogv/{{episode.slug}}.ogv" controls width=200 ></video> #}
 <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/ogv/{{episode.slug}}.ogv">ogv</a>
 <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/mp4/{{episode.slug}}.mp4">mp4</a>
@@ -122,6 +104,27 @@ $(".viewer").zoomer();
 </table>
 
 <input type="submit" value="Save" />
+
+{% if episode.image_file_set.all %}
+<div class="viewer" style="height: 200px; width: 800px;" >
+{% for img in episode.image_file_set.all %}
+    <img alt="recording sheet" src="http://192.237.240.167/static/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}" width=200 height=400 >
+{% endfor %}
+</div>
+
+ <script>
+$(".viewer").zoomer();
+ </script>
+{% endif %}
+
+{% comment %}
+{% for img in episode.image_file_set.all %}
+<a href="http://192.237.240.167/static/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}">
+    <img alt="recording sheet" src="http://192.237.240.167/static/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}" width=90 >
+</a>
+{% endfor %}
+{% endcomment %}
+
 
 {{ clrfformset.management_form }}
 <table border=1>
