Remove the login and login description from the Simple UI.

--- a/dj/main/templates/approve/edit.html
+++ b/dj/main/templates/approve/edit.html
@@ -1,9 +1,5 @@
-{# approve.html #}
+{# approve/edit.html #}
 {% extends "approve/base.html" %}
-
-{% block head %}
-<title>veyepar: approve {{episode.name}}</title>
-{% endblock %}
 
 {% block point %}
 
@@ -14,15 +10,12 @@ or much more if you allow your pefection-izm to get the best of you.</p>
 <a href="{% url guest_episode_review show_slug=episode.show.slug episode_slug=episode.slug edit_key=episode.edit_key %}">
 {% url guest_episode_review show_slug=episode.show.slug episode_slug=episode.slug edit_key=episode.edit_key %}</a>
 </p>
-<p>Ignore the login.  That is for video team members to do additional work.</p>
 <p>
 Ideally that page will let you do all you need and you don't have to read this next part.  
 </p>
 <hr>
 <p>
-It also contains this link the original interface that lets you do all sorts of things, like use the alternate audio track:
-<a href="{% url episode episode_id=episode.id episode_slug=episode.slug edit_key=episode.edit_key %}">
-    {% url episode episode_id=episode.id episode_slug=episode.slug edit_key=episode.edit_key %}</a>
+It also contains this link the original interface that lets you do all sorts of things, like use the alternate audio track.
 </p>
 
 <p>BTW, allowing the presenter to work on their talk is a new feature.
