--- a/dj/main/templates/approve/not_ready.html
+++ b/dj/main/templates/approve/not_ready.html
@@ -1,9 +1,5 @@
-{# approve.html #}
+{# approve/not_ready.html #}
 {% extends "approve/base.html" %}
-
-{% block head %}
-<title>veyepar: approve {{episode.name}}</title>
-{% endblock %}
 
 {% block point %}
 
