--- a/dj/main/templates/approve/base.html
+++ b/dj/main/templates/approve/base.html
@@ -1,34 +1,27 @@
 {# approve/base.html #}
 {% extends "base.html" %}
 
-{% block head %}
-<title>veyepar: approve {{episode.name}}</title>
-{% endblock %}
+{% block login %}{% endblock %}
 
 {% block content %}
 
 <table>
 <tbody>
 <tr><td>Name</td><td><b>{{episode.name}}</b></td></tr>
-<tr><td>Author(s)</td><td>{{episode.authors}} </td></tr>
+<tr><td>Presnter(s)</td><td>{{episode.authors}} </td></tr>
 <tr><td>Location</td><td>{{episode.location}} </td></tr>
 <tr><td>Date</td><td>{{episode.start|date:"b D d"}}</td></tr>
-<tr><td>state</td><td>{{episode.state}}</td></tr>
-<tr><td>url</td><td>
+</tbody>
+</table>
 {% if episode.public_url %}
-  <a href="{{episode.public_url}}">{{episode.public_url}}</a>
+    <a href="{{episode.public_url}}">{{episode.public_url}}</a>
 {% else %}
     {% if episode.host_url %}
       <a href="{{episode.host_url}}">{{episode.host_url}}</a>
     {% endif %}
 {% endif %}
-       </td></tr>
-
-</tbody>
-</table>
 
 {% block point  %}
-
 {% endblock %}
 
 <p>If you were hoping to update the description, 
