--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -87,6 +87,7 @@ Admin: <a href="{% url admin:main_episode_change episode.id%}">episode</a>
 {%if episode.public_url%}<a href="{{episode.public_url}}">public</a>{%endif%}
 <br/>
 <a href="{% url episode_logs episode.id %}">logs</a><br/>
+<a href="{% url eps_xfer episode.show.client.slug episode.show.slug %}?id={{episode.id}}">{{episode.slug}}.json</a>
 
 <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/titles/{{episode.slug}}.svg"> svg</a>
 <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/titles/{{episode.slug}}.png"> png</a><br/>
